force-app/main/default/objects/SiteUserSession__c/SiteUserSession__c.object-meta.xml
<CustomObject>
    <label>SiteUserSession</label>
    <nameField>
        <displayFormat>S{00000000}</displayFormat>
        <label>SiteUserSession Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SiteUserSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>