force-app/main/default/objects/SiteUserSession__c/fields/Action_Log__c.field-meta.xml
<CustomField>
    <fullName>Action_Log__c</fullName>
    <label>Action Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>