force-app/main/default/objects/SiteUserSession__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marca</valueSetName>
    </valueSet>
</CustomField>