force-app/main/default/objects/SiteUserSession__c/fields/Production_Season__c.field-meta.xml
<CustomField>
    <fullName>Production_Season__c</fullName>
    <label>Production Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>