force-app/main/default/objects/SiteUserSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Valid_Date_Time__c</columns>
    <columns>Valid_Session__c</columns>
    <columns>Close_Time__c</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/7/2020 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>